--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -1,83 +1,80 @@
 {
   "moderation": {
-    "reason": "Grund",
-    "errorPunishNotAllowed": "Du kannst diesen User nicht bestrafen.",
-    "userBan": "Der User `{u}` wurde für `{r}` gebannt.",
-    "userKick": "Der User `{u}` wurde für `{r}` gekickt.",
-    "errorClearAmount": "Die Anzahl der Nachrichten darf nur zwischen 1 und 2000 liegen.",
-    "clearDeleted": "Es wurden `{a}` Nachrichten gelöscht.",
-    "removeReaction": "Es wurden `{a} Reactions gelöscht.`",
-    "noreason": "Kein Grund gegeben.",
-    "plyooxFooter": "Plyoox Moderation",
-    "userEmbedDuration": "Du wurdest bis {d}",
-    "userEmbedPerma": "Du wurdest permanent",
-    "userEmbedReason": "für `{r}`",
-    "userEmbedPunish0": "vom Server `{n}` {r}ausgeschlossen.",
-    "userEmbedPunish1": "Du wurdest vom Server `{n}` {r}gekickt.",
-    "userEmbedPunish2": "auf dem Server `{n}` {r}gemutet.",
-    "minStringLength": "Die Zeichenkette muss länger als 3 Zeichen sein.",
-    "softbanUnban": "Softban abgelaufen",
-    "noMuteRole": "Der Server hat keine Muterolle.",
-    "tempbanExpiredReason": "Tempban abgelaufen",
-    "kick": "Kick",
-    "ban": "Bann",
-    "mute": "Mute",
-    "tempmute": "Tempmute",
-    "tempban": "Tempban",
-    "clear": "Clear",
-    "amount": "Anzahl",
-    "duration": "Dauer",
-    "unban": "Entbann",
-    "unmute": "Entmute",
-    "resetPoints": "Punkte zurückgesetzt",
-    "unmuteReason": "Mute abgelaufen",
-    "unbanReason": "Bann abgelaufen",
-    "tempmuteSuccess": "Der User `{u}` wurde erfolgreich `{d}` für `{r}` gemutet.",
-    "tempbanSuccess": "Der User `{u}` wurde erfolgreich `{d}` für `{r}` gebannt.",
-    "muteSuccess": "Der User `{u}` wurde erfolgreich für `{r}` gemutet",
-    "notMuted": "Der User ist nicht gemutet.",
-    "unmuteSuccess": "Der User `{u}` wurde für `{r}` entmutet.",
-    "unbanSuccess": "Der User `{u}` wurde erfolgreich für `{r}` entbannt.",
-    "pointsOverflow": "Du kannst nur Punkte von 1-20 hinzufügen.",
-    "warnSuccess": "Der User `{u}` hat `{p}` Punkte für `{r}` erhalten.",
-    "noPointsError": "Der User hat derzeit keine Punkte.",
-    "pointsSuccess": "Der User `{u}` hat `{p}` Punkte.",
-    "pointsReset": "Die Punkte des Users `{u}` wurden für `{r}` zurückgesetzt.",
-    "maxSlowmodeError": "Die Sekundenanzahl muss zwischen 0 und 21600 Sekunden (6h) liegen.",
-    "slowmodeSuccess": "Der Slowmode wurde erfolgreich auf `{s}` Sekunden gesetzt.",
-    "checkUserBanned": "Dieser User ist derzeit für {r} gebannt.",
-    "checkBanned": "Dieser User ist bis `{d}` für `{r}` gebannt.",
-    "checkTempmute": "Dieser User ist bis `{d}` für `{r}` gemutet.",
-    "checkPunishments": "Der User hat derzeit `{p}` Vergehen.",
-    "checkNoPunishments": "Der User hat keine offenen Bestrafungen oder Einträge."
+    "multi.error.notallowed": "Du kannst diesen User nicht bestrafen.",
+    "ban.message": "Der User `{u}` wurde für `{r}` gebannt.",
+    "kick.message": "Der User `{u}` wurde für `{r}` gekickt.",
+    "clear.error.amount": "Die Anzahl der Nachrichten darf nur zwischen 1 und 2000 liegen.",
+    "clear.message.deleted": "Es wurden `{a}` Nachrichten gelöscht.",
+    "remove.message.reactions": "Es wurden `{a} Reactions gelöscht.`",
+    "log.embed.footer": "Plyoox Moderation",
+    "log.embed.duration": "Du wurdest bis {d}",
+    "log.embed.perma": "Du wurdest permanent",
+    "log.embed.reason": "für `{r}`",
+    "log.embed.ban": "vom Server `{n}` {r}ausgeschlossen.",
+    "log.embed.kick": "Du wurdest vom Server `{n}` {r}gekickt.",
+    "log.embed.mute": "auf dem Server `{n}` {r}gemutet.",
+    "log.noreason": "Kein Grund gegeben.",
+    "remove.error.minlength": "Die Zeichenkette muss länger als 3 Zeichen sein.",
+    "softban.reason": "Softban abgelaufen",
+    "multi.error.nomuterole": "Der Server hat keine Muterolle.",
+    "ban.temp.reason.expired": "Tempban abgelaufen",
+    "word.kick": "Kick",
+    "word.ban": "Bann",
+    "word.mute": "Mute",
+    "word.tempmute": "Tempmute",
+    "word.tempban": "Tempban",
+    "word.clear": "Clear",
+    "word.amount": "Anzahl",
+    "word.duration": "Dauer",
+    "word.unban": "Entbann",
+    "word.unmute": "Entmute",
+    "word.resetPoints": "Punkte zurückgesetzt",
+    "mute.temp.reason.unmute": "Mute abgelaufen",
+    "mute.temp.message": "Der User `{u}` wurde erfolgreich `{d}` für `{r}` gemutet.",
+    "ban.temp.message": "Der User `{u}` wurde erfolgreich `{d}` für `{r}` gebannt.",
+    "mute.message": "Der User `{u}` wurde erfolgreich für `{r}` gemutet",
+    "unmute.error.notmuted": "Der User ist nicht gemutet.",
+    "unmute.message": "Der User `{u}` wurde für `{r}` entmutet.",
+    "unban.message": "Der User `{u}` wurde erfolgreich für `{r}` entbannt.",
+    "warn.error.points": "Du kannst nur Punkte von 1-20 hinzufügen.",
+    "warn.message": "Der User `{u}` hat `{p}` Punkte für `{r}` erhalten.",
+    "points.error.nopoints": "Der User hat derzeit keine Punkte.",
+    "points.message": "Der User `{u}` hat `{p}` Punkte.",
+    "pointsreset.message": "Die Punkte des Users `{u}` wurden für `{r}` zurückgesetzt.",
+    "slowmode.error.maxseconds": "Die Sekundenanzahl muss zwischen 0 und 21600 Sekunden (6h) liegen.",
+    "slowmode.message": "Der Slowmode wurde erfolgreich auf `{s}` Sekunden gesetzt.",
+    "check.ban.perma": "Dieser User ist derzeit für {r} gebannt.",
+    "check.ban.temp": "Dieser User ist bis `{d}` für `{r}` gebannt.",
+    "check.mute.temp": "Dieser User ist bis `{d}` für `{r}` gemutet.",
+    "check.punish": "Der User hat derzeit `{p}` Vergehen.",
+    "check.nopunish": "Der User hat keine offenen Bestrafungen oder Einträge."
   },
   "errors": {
-    "roleNotFound": "Die Rolle wurde nicht gefunden.",
-    "memberNotFound": "Das Mitglied wurde nicht gefunden.",
-    "userNotFound": "Der User wurde nicht gefunden.",
-    "channelNotFound": "Der Channel wurde nicht gefunden.",
-    "missingArgument": "Das Argument `{p}` wurde nicht angegeben.",
-    "badArgument": "Ein Argument wurde falsch angegeben.\n```{e}```",
-    "botMissingPermissions": "Der Bot benötigt die Berechtigung `{p}`",
-    "userMissingPermissions": "Dir fehlen die Berechtigung `{p}`",
-    "ownerOnly": "Diesen Command kann nur der Owner des Bots ausführen.",
-    "disabledCommand": "Dieser Command ist auf diesem Server deaktiviert.",
-    "cooldownCommand": "Dieser Command hat einen Cooldown. Du kannst ihn nur {r} pro {p}s benutzen.\nVersuche es in {rt}s erneut.",
-    "discordForbidden": "Es ist ein unerwarteter Fehler aufgetreten. Überprüfe ob der Bot alle nötigen Rechte hat."
+    "error.rolenotfound": "Die Rolle wurde nicht gefunden.",
+    "error.membernotfound": "Das Mitglied wurde nicht gefunden.",
+    "error.usernotfound": "Der User wurde nicht gefunden.",
+    "error.channelnotfound": "Der Channel wurde nicht gefunden.",
+    "error.missingargument": "Das Argument `{p}` wurde nicht angegeben.",
+    "error.badargument": "Ein Argument wurde falsch angegeben.\n```{e}```",
+    "error.permissions.bot": "Der Bot benötigt die Berechtigung `{p}`",
+    "error.permissions.user": "Dir fehlen die Berechtigung `{p}`",
+    "error.command.owneronly": "Diesen Command kann nur der Owner des Bots ausführen.",
+    "error.command.disabled": "Dieser Command ist auf diesem Server deaktiviert.",
+    "error.command.cooldown": "Dieser Command hat einen Cooldown. Du kannst ihn nur {r} pro {p}s benutzen.\nVersuche es in {rt}s erneut.",
+    "error.discord.forbidden": "Es ist ein unerwarteter Fehler aufgetreten. Überprüfe ob der Bot alle nötigen Rechte hat."
   },
   "fun": {
-    "errorSameUser": "Du kannst dicht zweimal den gleichen User nennen.",
-    "errorNoQuestion": "Nur eine Frage gefunden. Trenne Fragen mit `|`.",
-    "chooseMessage": "Ich wähle: `{c}`.",
-    "slotWin": "{s}\nDu hast gewonnen! \uD83C\uDF89",
-    "slotLose": "{s}\nVerloren \uD83D\uDE22",
-    "patMessage": "{u1} streichelt {u2}",
-    "hugMessage": "{u1} umarmt {u2}",
-    "highfiveMessage": "{u1} klatscht mit {u2} ein",
-    "rageMessage": "{u} dreht durch",
-    "cryMessage": "{u} weint",
-    "8ball": {
-      "answers": [
+    "multi.error.sameuser": "Du kannst dicht zweimal den gleichen User nennen.",
+    "thisorthat.error.needmultiple": "Nur eine Frage gefunden. Trenne Fragen mit `|`.",
+    "thisorthat.message": "Ich wähle: `{c}`.",
+    "slot.message.win": "{s}\nDu hast gewonnen! \uD83C\uDF89",
+    "slot.message.lose": "{s}\nVerloren \uD83D\uDE22",
+    "pat.message": "{u1} streichelt {u2}",
+    "hug.message": "{u1} umarmt {u2}",
+    "highfive.message": "{u1} klatscht mit {u2} ein",
+    "rage.message": "{u} dreht durch",
+    "cry.message": "{u} weint",
+    "8ball.answers": [
         "Ja.",
         "Kann sein.",
         "Auf jeden Fall!",
@@ -99,12 +96,46 @@
         "Meine Antwort ist ja.",
         "Meine Antwort ist nein.",
         "Ich bin mir unsicher."
-      ]
-    },
-    "laughMessage": "{u} lacht"
+      ],
+    "laugh.message": "{u} lacht"
+  },
+  "infos": {
+    "info.embed.description": "```Name: {u}\nID: {u.id}```",
+    "info.embed.title": "__**Info über {n}**__",
+    "info.embed.account.name": "Account",
+    "info.embed.account.value": "```Alter: {jd}\nvor {dd} Tagen```",
+    "info.embed.server.name": "Server",
+    "info.embed.server.value": "```Beigetreten: {jg}\nvor {sjg} Tagen\nPosition: {jp}```",
+    "info.embed.roles.name": "Rollen ({r})",
+    "info.embed.falgs.name": "Abzeichen ({f})",
+    "todayjoined.message": "In den letzten 24 Stunden sind `{j}` User auf den Server gejoint.",
+    "joined.error.invalidposition": "Kein User ist auf dieser Join Position.",
+    "joined.embed.title": "Join Position",
+    "joined.embed.infos.name": "Infos",
+    "joined.embed.infos.value": "```Position: {p}\nvor {d} Tagen```",
+    "members.message": "Der Discord hat momentan `{m}` Mitglieder.",
+    "role.message": "Die Rolle {m} hat {l} Mitglieder.",
+    "vote.message": "Vote [hier]({l}) für mich :D",
+    "bot.embed.owner.name": "Besitzer",
+    "bot.embed.guilds.name": "Server Anzahl",
+    "bot.embed.users.name": "User Anzahl",
+    "bot.embed.versions.name": "Versionen",
+    "bot.word.dashboard": "Dashboard",
+    "bot.word.invite": "Einladung",
+    "bot.word.source": "Quellcode",
+    "guild.embed.description": "```Name: {g.name}\nID: {g.id}\nOwner: {g.owner}\nRegion: {g.region}```",
+    "guild.embed.members.name": "Mitglieder",
+    "guild.embed.data.name": "Daten",
+    "guild.embed.data.value": "Erstellt: {c}\nvor {d} Tagen",
+    "guild.embed.channels.name": "Channel",
+    "guild.embed.channels.value": "```Insgesamt: {a}\nTextchannel: {t}\nVoicechannel: {v)}\nKategorien: {c}```",
+    "guild.embed.emojis.name": "Emojis ({e})"
   },
   "utils": {
-    "user": "User",
-    "moderator": "Moderator"
+    "date.format.small": "%d. %m. %Y",
+    "date.format.large": "%d. %m. %Y um %H:%M:%S",
+    "word.user": "User",
+    "word.moderator": "Moderator",
+    "word.reason": "Grund"
   }
 }
