add multilanguage support for administration plugin

--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -166,6 +166,30 @@
     "bin.message": "`{n}` in binär ist `{b}`",
     "hex.message": "`{n}` in hexadezimal ist `{h}`"
   },
+  "administration": {
+    "prefix.error.maxlength": "Der Prefix darf maximal 3 Zeichen lang sein.",
+    "prefix.message": "Der Prefix wurde erfolgreich zu `{p}` geändert.",
+    "activate.leveling.message": "Das Levelsystem wurde aktiviert.",
+    "activate.fun.message": "Das Fun-Plugin wurde aktiviert.",
+    "activate.automod.message": "Der Automod wurde aktiviert.",
+    "activate.welcomer.message": "Der Welcomer wurde aktiviert.",
+    "activate.globalbans.message": "Die Globalbans wurden aktiviert.",
+    "activate.logging.message": "Das Logging wurde aktiviert.",
+    "activate.timer.message": "Das Timer-Plugin wurde aktiviert.",
+    "deactivate.leveling.message": "Das Levelsystem wurde deaktiviert.",
+    "deactivate.fun.message": "Das Fun-Plugin wurde deaktiviert.",
+    "deactivate.automod.message": "Der Automod wurde deaktiviert.",
+    "deactivate.welcomer.message": "Der Welcomer wurde deaktiviert.",
+    "deactivate.globalbans.message": "Die Globalbans wurden deaktiviert.",
+    "deactivate.logging.message": "Das Logging wurde deaktiviert.",
+    "deactivate.timer.message": "Das Timer-Plugin wurde deaktiviert.",
+    "setupmute.error.nomuterole": "Der Server hat keine Mute-Rolle.",
+    "setupmute.message": "Die Muterolle wurde eingestellt.",
+    "copyblacklist.error.guildnotfound": "Der Server konnte nicht gefunden werden.",
+    "copyblacklist.error.nopermissions": "Du bist nicht auf diesem Server oder hast keine Administrator-Rechte.",
+    "copyblacklist.error.nowords": "Der Server hat keine Wörter eingespeichert.",
+    "copyblacklist.message": "Die Blacklist wurde geupdated."
+  },
   "utils": {
     "date.format.small": "%d. %m. %Y",
     "date.format.large": "%d. %m. %Y um %H:%M:%S",
