add multilanguage support for logging module

--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -203,6 +203,29 @@
     "copyblacklist.error.nowords": "Der Server hat keine Wörter eingespeichert.",
     "copyblacklist.message": "Die Blacklist wurde geupdated."
   },
+  "logging": {
+    "ban.embed.title": "LOGGING [BANN]",
+    "ban.embed.description": "```{u} [{u.id}]\nvor {d} Tagen beigetreten```",
+    "unban.embed.title": "LOGGING [ENTBANN]",
+    "unban.embed.description": "```{u} [{u.id}]\nvor {d} Tagen erstellt```",
+    "join.embed.title": "LOGGING [BEIGETRETEN]",
+    "remove.embed.title": "LOGGING [VERLASSEN]",
+    "words.roles": "Rollen",
+    "delete.embed.title": "LOGGING [NACHRICHT GELÖSCHT]",
+    "delete.embed.description": "```{u} [{u.id}]```",
+    "delete.embed.message.title": "Nachricht",
+    "delete.embed.attachment.title": "Anhang",
+    "edit.embed.title": "LOGGING [NACHRICHT EDITIERT]",
+    "edit.embed.description": "```{u} [{u.id}]```[Springe zur Nachricht]({l})",
+    "edit.embed.new.title": "Neue Nachricht",
+    "edit.embed.old.title": "Alte Nachricht",
+    "update.embed.name.title": "MEMBER [NAMENS UPDATE]",
+    "update.embed.name.new.title": "Neuer Name",
+    "update.embed.name.old.title": "Alter Name",
+    "update.embed.role.title": "MEMBER [ROLEN ÄNDERUNG]",
+    "update.embed.role.nameadd": "Rolle hinzugefügt",
+    "update.embed.role.nameremove": "Rolle entfernt"
+  },
   "utils": {
     "date.format.small": "%d. %m. %Y",
     "date.format.large": "%d. %m. %Y um %H:%M:%S",
