add automod messages

--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -248,6 +248,30 @@
     "reminder.message.deleted": "Der Timer wurde gelöscht.",
     "reminder.error.delete": "Der Timer konnte nicht gelöscht werden. Du bist nicht der Ersteller des Timers oder er existiert nicht."
   },
+  "automod": {
+    "word.automod": "Automod",
+    "word.points": "Punkte",
+    "word.punishuntil": "Bestraft bis",
+    "word.message": "Nachricht",
+    "word.channel": "Channel",
+    "word.kick": "Kick",
+    "word.ban": "Bann",
+    "word.reason": "Grund",
+    "word.tempban": "Temporärer Bann",
+    "word.tempmute": "Temporärer Mute",
+    "logs.user.start": "Du wurdest wegen {r}",
+    "log.word.mute": "gemutet",
+    "log.word.ban": "gebannt",
+    "log.word.warn": "gewarnt",
+    "log.duration": "bis zum {d}",
+    "log.guildname": "auf dem {n}",
+    "log.points": "Du hast nun {p} Punkte.",
+    "reason.blacklistedword": "Verbotenes Wort",
+    "reason.invite": "Discord-Einladung",
+    "reason.link": "Link",
+    "reason.caps": "Zu viele Großbuchstaben",
+    "reason.mentions": "Zu viele Erwähnungen"
+  },
   "utils": {
     "date.format.small": "%d. %m. %Y",
     "date.format.large": "%d. %m. %Y um %H:%M:%S",
