--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -141,7 +141,7 @@
     "guild.embed.data.name": "Daten",
     "guild.embed.data.value": "Erstellt: {c}\nvor {d} Tagen",
     "guild.embed.channels.name": "Channel",
-    "guild.embed.channels.value": "```Insgesamt: {a}\nTextchannel: {t}\nVoicechannel: {v)}\nKategorien: {c}```",
+    "guild.embed.channels.value": "```Insgesamt: {a}\nTextchannel: {t}\nVoicechannel: {v}\nKategorien: {c}```",
     "guild.embed.emojis.name": "Emojis ({e})"
   },
   "leveling": {
