add max points in relation to points command

--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -40,7 +40,8 @@
     "warn.error.points": "Du kannst nur Punkte von 1-20 hinzufügen.",
     "warn.message": "Der User `{u}` hat `{p}` Punkte für `{r}` erhalten.",
     "points.error.nopoints": "Der User hat derzeit keine Punkte.",
-    "points.message": "Der User `{u}` hat `{p}` Punkte.",
+    "points.message": "Der User `{u}` hat `{p}/{m}` Punkte.",
+    "points.error.notset": "Der Server hat keine Einstellungen in diesem Bereich.",
     "pointsreset.message": "Die Punkte des Users `{u}` wurden für `{r}` zurückgesetzt.",
     "slowmode.error.maxseconds": "Die Sekundenanzahl muss zwischen 0 und 21600 Sekunden (6h) liegen.",
     "slowmode.message": "Der Slowmode wurde erfolgreich auf `{s}` Sekunden gesetzt.",
