fix errors with giveaway

--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -236,8 +236,8 @@
     "giveaway.event.nowinners.edited": "**Giveaway beendet**\nKeine Gewinner",
     "giveaway.event.edit.single": "**Giveaway beendet**\n{m} hat gewonnen \uD83C\uDF89",
     "giveaway.event.edit.multiple": "**Giveaway beendet**\n{m} haben gewonnen \uD83C\uDF89",
-    "giveaway.event.message.single": "Gewinner von {w} ist {m}",
-    "giveaway.event.message.multiple": "Gewinner von {w} sind {m}",
+    "giveaway.event.message.single": "Gewinner von `{w}` ist {m}",
+    "giveaway.event.message.multiple": "Gewinner von `{w}` sind {m}",
     "giveaway.embed.title": "\uD83C\uDF89 Giveaway \uD83C\uDF89",
     "giveaway.embed.description": "Reagiere mit \uD83C\uDF89 um dem Giveaway beizutreten.",
     "giveaway.message.started": "Das Giveaway wurde gestartet.",
