--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -116,19 +116,18 @@
     "laugh.message": "{u} lacht"
   },
   "infos": {
-    "info.embed.description": "```Name: {u}\nID: {u.id}```",
+    "info.embed.description": "Name: {u}\nID: {u.id}",
     "info.embed.title": "__**Info über {n}**__",
     "info.embed.account.name": "Account",
-    "info.embed.account.value": "```Alter: {jd}\nvor {dd} Tagen```",
+    "info.embed.account.value": "Alter: {jd}\nvor {dd} Tagen",
     "info.embed.server.name": "Server",
-    "info.embed.server.value": "```Beigetreten: {jg}\nvor {sjg} Tagen\nPosition: {jp}```",
+    "info.embed.server.value": "Beigetreten: {jg}\nvor {sjg} Tagen\nPosition: {jp}",
     "info.embed.roles.name": "Rollen ({r})",
     "info.embed.falgs.name": "Abzeichen ({f})",
     "todayjoined.message": "In den letzten 24 Stunden sind `{j}` User auf den Server gejoint.",
     "joined.error.invalidposition": "Kein User ist auf dieser Join Position.",
     "joined.embed.title": "Join Position",
     "joined.embed.infos.name": "Infos",
-    "joined.embed.infos.value": "```Position: {p}\nvor {d} Tagen```",
     "members.message": "Der Discord hat momentan `{m}` Mitglieder.",
     "role.message": "Die Rolle {m} hat {l} Mitglieder.",
     "vote.message": "Vote [hier]({l}) für mich :D",
@@ -139,12 +138,12 @@
     "bot.word.dashboard": "Dashboard",
     "bot.word.invite": "Einladung",
     "bot.word.source": "Quellcode",
-    "guild.embed.description": "```Name: {g.name}\nID: {g.id}\nOwner: {g.owner}\nRegion: {g.region}```",
+    "guild.embed.description": "Name: {g.name}\nID: {g.id}\nOwner: {g.owner}\nRegion: {g.region}",
     "guild.embed.members.name": "Mitglieder",
     "guild.embed.data.name": "Daten",
     "guild.embed.data.value": "Erstellt: {c}\nvor {d} Tagen",
     "guild.embed.channels.name": "Channel",
-    "guild.embed.channels.value": "```Insgesamt: {a}\nTextchannel: {t}\nVoicechannel: {v}\nKategorien: {c}```",
+    "guild.embed.channels.value": "Insgesamt: {a}\nTextchannel: {t}\nVoicechannel: {v}\nKategorien: {c}",
     "guild.embed.emojis.name": "Emojis ({e})",
     "guild.embed.boosts.name": "Boosts ({l})",
     "guild.embed.boosts.value": "{b} von {m}"
@@ -158,7 +157,7 @@
     "levelroles.error.noroles": "Der Server hat keine Levelrollen festgelegt.",
     "levelroles.embed.title": "Level-Rollen",
     "top.embed.title": "TOP 10 | {g}",
-    "top.embed.user.value": "```Level: {l}\nXP: {c}/{x}```",
+    "top.embed.user.value": "Level: {l}\nXP: {c}/{x}",
     "resetlevel.error.bot": "Dieser User ist ein Bot.",
     "resetlevel.message": "Das Level des Users `{u}` wurde erfolgreich zurückgesetzt."
   },
@@ -178,7 +177,7 @@
   },
   "utilities": {
     "someone.embed.title": "Zufälliger User",
-    "someone.embed.description": "```{u} [{u.id}]\nvor {d} Tagen beigetreten```",
+    "someone.embed.description": "{u} [{u.id}]\nvor {d} Tagen beigetreten",
     "invite.embed.title": "Hol mich {e}",
     "bin.error.tolarge": "Die Zahl ist zu groß!",
     "bin.message": "`{n}` in binär ist `{b}`",
@@ -211,14 +210,14 @@
   },
   "logging": {
     "ban.embed.title": "LOGGING [BANN]",
-    "ban.embed.description": "```{u} [{u.id}]\nvor {d} Tagen beigetreten```",
+    "ban.embed.description": "{u} [{u.id}]\nvor {d} Tagen beigetreten",
     "unban.embed.title": "LOGGING [ENTBANN]",
-    "unban.embed.description": "```{u} [{u.id}]\nvor {d} Tagen erstellt```",
+    "unban.embed.description": "{u} [{u.id}]\nvor {d} Tagen erstellt",
     "join.embed.title": "LOGGING [BEIGETRETEN]",
     "remove.embed.title": "LOGGING [VERLASSEN]",
     "words.roles": "Rollen",
     "delete.embed.title": "LOGGING [NACHRICHT GELÖSCHT]",
-    "delete.embed.description": "```{u} [{u.id}]```",
+    "delete.embed.description": "{u} [{u.id}]",
     "delete.embed.message.title": "Nachricht",
     "delete.embed.attachment.title": "Anhang",
     "edit.embed.title": "LOGGING [NACHRICHT EDITIERT]",
