--- a/src/utils/languages/de/commands.json
+++ b/src/utils/languages/de/commands.json
@@ -80,6 +80,7 @@
     "error.discord.forbidden": "Es ist ein unerwarteter Fehler aufgetreten. Überprüfe ob der Bot alle nötigen Rechte hat."
   },
   "fun": {
+    "color.message": "Es wurde eine zufällige Farbe generiert:\nFarbcode in RGB `{r}` und HEX `{h}`",
     "multi.error.sameuser": "Du kannst dicht zweimal den gleichen User nennen.",
     "thisorthat.error.needmultiple": "Nur eine Frage gefunden. Trenne Fragen mit `|`.",
     "thisorthat.message": "Ich wähle: `{c}`.",
