--- a/src/utils/languages/de/commands_de.json
+++ b/src/utils/languages/de/commands_de.json
@@ -79,6 +79,9 @@
     "error.command.cooldown": "Dieser Command hat einen Cooldown. Du kannst ihn nur {r} pro {p}s benutzen.\nVersuche es in {rt}s erneut.",
     "error.discord.forbidden": "Es ist ein unerwarteter Fehler aufgetreten. Überprüfe ob der Bot alle nötigen Rechte hat."
   },
+  "commands": {
+    
+  },
   "fun": {
     "color.message": "Es wurde eine zufällige Farbe generiert:\nFarbcode in RGB `{r}` und HEX `{h}`",
     "multi.error.sameuser": "Du kannst dicht zweimal den gleichen User nennen.",
