change logging embed form and text

--- a/src/utils/languages/de/commands_de.json
+++ b/src/utils/languages/de/commands_de.json
@@ -214,28 +214,29 @@
     "copyblacklist.message": "Die Blacklist wurde geupdated."
   },
   "logging": {
-    "ban.embed.title": "LOGGING [BANN]",
-    "ban.embed.description": "{u} [{u.id}]\nvor {d} Tagen beigetreten",
-    "unban.embed.title": "LOGGING [ENTBANN]",
-    "unban.embed.description": "{u} [{u.id}]\nvor {d} Tagen erstellt",
-    "join.embed.title": "LOGGING [BEIGETRETEN]",
-    "remove.embed.title": "LOGGING [VERLASSEN]",
-    "words.roles": "Rollen",
-    "delete.embed.title": "LOGGING [NACHRICHT GELÖSCHT]",
-    "delete.embed.description": "{u} [{u.id}]",
-    "delete.embed.message.title": "Nachricht",
-    "delete.embed.attachment.title": "Anhang",
-    "edit.embed.title": "LOGGING [NACHRICHT EDITIERT]",
-    "edit.embed.description": "```{u} [{u.id}]```[Springe zur Nachricht]({l})",
+    "role.embed.title": "Rollen Änderung",
+    "role.embed.remove": "**{u}** hat die Rolle **{r.mention}** verloren.",
+    "role.embed.add": "**{u}** hat die Rolle **{r.mention}** erhalten.",
+    "name.embed.title": "Namen Änderung",
+    "name.embed.description": "Der User **{b.display_name}** heißt nun **{a.display_name}**.",
+    "edit.embed.title": "Nachricht editiert",
+    "edit.embed.description": "**{u}** hat eine Nachricht in {c} editiert.\n[Springe zur Nachricht]({l})",
     "edit.embed.new.title": "Neue Nachricht",
     "edit.embed.old.title": "Alte Nachricht",
-    "word.channel": "Channel",
-    "update.embed.name.title": "MEMBER [NAMENS UPDATE]",
-    "update.embed.name.new.title": "Neuer Name",
-    "update.embed.name.old.title": "Alter Name",
-    "update.embed.role.title": "MEMBER [ROLLEN ÄNDERUNG]",
-    "update.embed.role.nameadd": "Rolle hinzugefügt",
-    "update.embed.role.nameremove": "Rolle entfernt"
+    "delete.embed.title": "Nachricht gelöscht",
+    "delete.embed.description": "Eine Nachricht von **{u}** wurde aus {c} gelöscht.",
+    "delete.embed.message.title": "Nachricht",
+    "remove.embed.title": "Server verlassen",
+    "remove.embed.description": "Der User **{u}** hat den Server nach {d} Tagen verlassen.",
+    "join.embed.title": "Server beigetreten",
+    "join.embed.description": "Der User **{u}** hat den Server betreten.\nDieser Account ist {d} Tage alt.",
+    "ban.embed.title": "User gebannt",
+    "ban.embed.description": "Der User **{u}** wurde nach {d} Tagen auf dem Server gebannt.",
+    "unban.embed.title": "User entbannt",
+    "unban.embed.description": "Der User **{u}** wurde entbannt. Dieser Account ist {d} Tage alt.",
+
+    "words.roles": "Rollen",
+    "word.channel": "Channel"
   },
   "timers": {
     "giveaway.event.nowinners": "Das Giveaway `{w}` Niemand hat teilgenommen. Es gibt keine Gewinner :(",
