change language style

--- a/src/utils/languages/de/commands_de.json
+++ b/src/utils/languages/de/commands_de.json
@@ -6,14 +6,16 @@
     "clear.error.amount": "Die Anzahl der Nachrichten darf nur zwischen 1 und 2000 liegen.",
     "clear.message.deleted": "Es wurden `{a}` Nachrichten gelöscht.",
     "remove.message.reactions": "Es wurden `{a} Reactions gelöscht.`",
+
     "log.embed.footer": "Plyoox Moderation",
-    "log.embed.duration": "Du wurdest bis {d}",
-    "log.embed.perma": "Du wurdest permanent",
-    "log.embed.reason": "für `{r}`",
-    "log.embed.ban": "vom Server `{n}` {r}ausgeschlossen.",
-    "log.embed.kick": "Du wurdest vom Server `{n}` {r}gekickt.",
-    "log.embed.mute": "auf dem Server `{n}` {r}gemutet.",
+    "log.embed.reason": "wegen `{r}` ",
     "log.noreason": "Kein Grund gegeben.",
+    "log.embed.ban.perm": "Du wurdest permanent vom Server `{n}` {r}gebannt.",
+    "log.embed.ban.temp": "Du wurdest für `{d}` vom Server `{n}` {r}gebannt.",
+    "log.embed.kick": "Du wurdest {r}vom Server `{n}` gekickt.",
+    "log.embed.mute.perm": "Du wurdest permanent vom Server `{n}` {r}gemutet.",
+    "log.embed.mute.temp": "Du wurdest für `{d}` vom Server `{n}` {r}gemutet.",
+
     "remove.error.minlength": "Die Zeichenkette muss länger als 3 Zeichen sein.",
     "softban.reason": "Softban abgelaufen",
     "multi.error.nomuterole": "Der Server hat keine Muterolle.",
@@ -23,6 +25,7 @@
     "word.mute": "Mute",
     "word.tempmute": "Tempmute",
     "word.tempban": "Tempban",
+    "word.log": "Log",
     "word.clear": "Clear",
     "word.amount": "Anzahl",
     "word.duration": "Dauer",
