--- a/src/utils/languages/en/commands_en.json
+++ b/src/utils/languages/en/commands_en.json
@@ -8,14 +8,14 @@
     "remove.message.reactions": "Reactions were deleted `{a}.",
 
     "log.embed.footer": "Plyoox Moderation",
-    "log.embed.duration": "Du wurdest bis {d}",
-    "log.embed.perma": "Du wurdest permanent",
-    "log.embed.reason": "für `{r}`",
-    "log.embed.ban": "vom Server `{n}` {r}ausgeschlossen.",
-    "log.embed.kick": "Du wurdest vom Server `{n}` {r}gekickt.",
-    "log.embed.mute": "auf dem Server `{n}` {r}gemutet.",
-
+    "log.embed.reason": " because of `{r}`",
     "log.noreason": "No reason given.",
+    "log.embed.ban.perm": "You were permanently banned from the server `{n}`{r}.",
+    "log.embed.ban.temp": "You were banned for `{d}` from the server `{n}`{r}.",
+    "log.embed.kick": "You were kicked from the server `{n}`{r}.",
+    "log.embed.mute.perm": "You were permanently muted from the server `{n}`{r}.",
+    "log.embed.mute.temp": "You were muted for `{d}` from the server `{n}`{r}.",
+
     "remove.error.minlength": "The string must be longer than 3 characters.",
     "softban.reason": "Softban expired",
     "multi.error.nomuterole": "The server has no mute role.",
@@ -23,6 +23,7 @@
     "word.kick": "Kick",
     "word.ban": "Ban",
     "word.mute": "Mute",
+    "word.log": "Log",
     "word.tempmute": "Tempmute",
     "word.tempban": "Tempban",
     "word.clear": "Clear",
@@ -176,7 +177,7 @@
     "embed.module.title": "Plyoox Module Help",
     "embed.group.subcommands": "Subcommands",
     "word.aliases": "Aliases",
-    "embed.description.help": "Use `{p}help [Command]` for help about a command\\nand `{p}help [module]` for help about a module.",
+    "embed.description.help": "Use `{p}help [Command]` for help about a command\nand `{p}help [Module]` for help about a module.",
     "embed.description.subhelp": "Use `{p}help [Command] [Subcommand]` for more detailed help about a command.",
     "embed.description.cmdhelp": "Use `{p}help [Command]` for more detailed help about a command.",
     "word.times": "\n**__Times:__**\n**`s`** seconds\n**`min`** minutes\n**`h`** hours\n**`d`** days\n**`mon`** months\n**`y`** years"
@@ -215,28 +216,28 @@
     "copyblacklist.message": "The blacklist was updated."
   },
   "logging": {
-    "ban.embed.title": "LOGGING [BANN]",
-    "ban.embed.description": "{u} [{u.id}]\nvor {d} Tagen beigetreten",
-    "unban.embed.title": "LOGGING [ENTBANN]",
-    "unban.embed.description": "{u} [{u.id}]\nvor {d} Tagen erstellt",
-    "join.embed.title": "LOGGING [BEIGETRETEN]",
-    "remove.embed.title": "LOGGING [VERLASSEN]",
-    "words.roles": "Rollen",
-    "delete.embed.title": "LOGGING [NACHRICHT GELÖSCHT]",
+    "ban.embed.title": "MEMBER [BAN]",
+    "ban.embed.description": "{u} [{u.id}]\njoined {d} days ago",
+    "unban.embed.title": "MEMBER [UNBAN]",
+    "unban.embed.description": "{u} [{u.id}]\ncreated {d} days ago",
+    "join.embed.title": "MEMBER [JOIN]",
+    "remove.embed.title": "MEMBER [LEAVE]",
+    "words.roles": "Roles",
+    "delete.embed.title": "MESSAGE [DELETED]",
     "delete.embed.description": "{u} [{u.id}]",
-    "delete.embed.message.title": "Nachricht",
-    "delete.embed.attachment.title": "Anhang",
-    "edit.embed.title": "LOGGING [NACHRICHT EDITIERT]",
-    "edit.embed.description": "```{u} [{u.id}]```[Springe zur Nachricht]({l})",
-    "edit.embed.new.title": "Neue Nachricht",
-    "edit.embed.old.title": "Alte Nachricht",
+    "delete.embed.message.title": "Message",
+    "delete.embed.attachment.title": "Attachments",
+    "edit.embed.title": "MESSAGE [EDITED]",
+    "edit.embed.description": "```{u} [{u.id}]```[Jump to message]({l})",
+    "edit.embed.new.title": "New message",
+    "edit.embed.old.title": "old message",
     "word.channel": "Channel",
-    "update.embed.name.title": "MEMBER [NAMENS UPDATE]",
-    "update.embed.name.new.title": "Neuer Name",
-    "update.embed.name.old.title": "Alter Name",
-    "update.embed.role.title": "MEMBER [ROLLEN ÄNDERUNG]",
-    "update.embed.role.nameadd": "Rolle hinzugefügt",
-    "update.embed.role.nameremove": "Rolle entfernt"
+    "update.embed.name.title": "MEMBER [NAME UPDATE]",
+    "update.embed.name.new.title": "New name",
+    "update.embed.name.old.title": "Old name",
+    "update.embed.role.title": "MEMBER [ROLE CHANGED]",
+    "update.embed.role.nameadd": "Role added",
+    "update.embed.role.nameremove": "Role removed"
   },
   "timers": {
     "giveaway.event.nowinners": "Das Giveaway `{w}` Niemand hat teilgenommen. Es gibt keine Gewinner :(",
